css/styles.css
/*
COLOR PALETTE

#f7fff7 - almost white
#343434 - dark gray - almost black
#2f3061 - blue dark
#ffe66d - yellow
#a1c6d7 - light blue
*/

/* Global Styles
---------------------------------*/
html{
    box-sizing: border-box;
}
*, *:before, *:after{
    box-sizing: inherit;
}
body{
color: #343434;
margin: 0;
padding: 0;
font-family: 'Montserrat', sans-serif;
line-height: 1.5;
}
img{
    width: 300px;
}
a{
    color: #ffe66d;
}
a:hover{
    text-decoration: none;
}
h1{
    font-size: 100px;
    line-height: 1;
}
h2{
    font-size: 45px;
}
h1, h2{
    font-family: 'Caveat', cursive;
    font-weight: 400;
    margin: 0;
}
.content-wrapper{
    width: 800px;
    margin: 0 auto;
    padding: 60px 0;
}

/* Profile
--------------------------------*/
header{
    background-color: #2f3061;
    color: #f7fff7;
}

/* Projects
--------------------------------*/
.projects{
    background: #f7fff7;
}
.projects a{

}
.projects .btn{
    color: #f7fff7;
    background: #2f3061;
    text-decoration: none;
    padding: 8px;
    border-radius: 4px;
    display: inline-block;
}
.projects .btn:hover{
    background: rgba(47, 48, 97, 80%);
}
.project-item img{
float: left;
}

/* Work Experience
--------------------------------*/
.work-experience{
    background: #a1c6d7;
}

/* Education
--------------------------------*/


/* Contact Info
--------------------------------*/
footer{
    background: #343434;
    color: #f7fff7;
}

